- site menu's not showing up - sidebar right not displaying correctly

--- a/app/assets/stylesheets/cold.css.scss
+++ b/app/assets/stylesheets/cold.css.scss
@@ -2420,9 +2420,9 @@ a.light-btn .frenchrose-btn {
 
 /* ---------------------------------------- */
 /* lists styles */
-#main_wrapper ul li {
+/* #main_wrapper ul li {
     list-style: inside disc;
-}
+} */
 #main_wrapper ul ul,
 #main_wrapper ol ol,
 #main_wrapper ul ol,
